--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context="com.example.jatin.wi_bird.MainActivity"
-        android:background="@color/back">
+        android:background="@color/drawer">
 
 
         <TextView
@@ -17,9 +17,7 @@
             android:layout_height="wrap_content"
             android:text="@string/hello_world" />
 
-        <include
-            android:id="@+id/app_bar"
-            layout="@layout/app_bar" />
+
 
     </RelativeLayout>
 
