--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,6 @@
     <color name="primaryColor">#3F51B5</color>
     <color name="primaryColorDark">#303F9F</color>
     <color name="colorAccent">#F50057</color>
-    <color name="drawer">#C5CAE9</color>
+    <color name="drawer">#EEE</color>
     <color name="back">#E8EAF6</color>
 </resources>
