--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -12,6 +12,10 @@
         android:background="@color/drawer">
 
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/hello_world" />
 
 
 
@@ -20,7 +24,7 @@
     <fragment
         android:id="@+id/fragment_navigation_drawer"
         app:layout="@layout/fragment_navigation_drawer"
-        android:layout_width="@dimen/nav_drawer_width"
+        android:layout_width="280dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:name="com.example.jatin.wi_bird.NavigationDrawerFragment"
