--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,6 @@
     <dimen name="image_right">16dp</dimen>
     <dimen name="image_left">16dp</dimen>
     <dimen name="text_left">72dp</dimen>
+    <dimen name="title">17dp</dimen>
+    <dimen name="sensor_value">15dp</dimen>
 </resources>
