--- a/app/src/main/res/layout/activity_velocity.xml
+++ b/app/src/main/res/layout/activity_velocity.xml
@@ -8,7 +8,100 @@
     <include
         android:id="@+id/app_bar"
         layout="@layout/app_bar" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/app_bar"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:layout_marginTop="150dp">
+
+    <TextView
+        style="@style/TextAppearance.AppCompat.Headline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Left Motor Velocity"
+        android:id="@+id/left_motor_velocity_label"
+        android:textColor="@color/colorAccent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="10dp" />
+
+    <TextView
+        style="@style/TextAppearance.AppCompat.Headline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Right Motor Velocity"
+        android:id="@+id/right_motor_velocity_label"
+        android:layout_below="@+id/left_velocity_seekbar"
+        android:textColor="@color/colorAccent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="10dp" />
+
+        <EditText
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/left_velocity_text"
+            android:textColor="@color/colorAccent"
+            android:layout_alignBottom="@+id/left_velocity_seekbar"
+            android:layout_toRightOf="@+id/left_velocity_seekbar"
+            android:layout_toEndOf="@+id/left_velocity_seekbar"
+            android:layout_alignParentRight="true"
+            android:inputType="number"
+            android:hint="0"/>
+
+        <EditText
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/right_velocity_text"
+            android:textColor="@color/colorAccent"
+            android:layout_alignBottom="@+id/right_velocity_seekbar"
+            android:layout_toRightOf="@+id/right_velocity_seekbar"
+            android:layout_toEndOf="@+id/right_velocity_seekbar"
+            android:layout_alignParentRight="true"
+            android:inputType="number"
+            android:hint="0"/>
+
+    <SeekBar
+        android:layout_width="260dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/left_velocity_seekbar"
+        android:layout_below="@+id/left_motor_velocity_label"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:thumbTint="@color/colorAccent"
+        android:indeterminate="false"
+        android:max="255"/>
 
 
+
+    <SeekBar
+        android:layout_width="260dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/right_velocity_seekbar"
+        android:layout_below="@+id/right_motor_velocity_label"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:thumbTint="@color/colorAccent"
+        android:indeterminate="false"
+        android:max="255" />
+
+        <Button
+            android:theme="@style/Widget.AppCompat.Button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:text="SET"
+            android:elevation="2dp"
+            android:id="@+id/set_button"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"/>
+        <!-- android:layout_below="@+id/right_velocity_seekbar"-->
+
+
+
+
+    </RelativeLayout>
 </RelativeLayout>
 
