--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -3,9 +3,16 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="AppTheme.Base">
         <!-- Customize your theme here. -->
+
         <item name="android:colorPrimary" >@color/primaryColor</item>
         <item name="android:colorPrimaryDark" >@color/primaryColorDark</item>
         <item name="android:colorAccent" >@color/colorAccent</item>
+        <item name="android:colorPressedHighlight">@color/pressed</item>
+    </style>
+
+    <style name="AppTheme.Button" parent="Widget.AppCompat.Button">
+        <item name="android:colorButtonNormal">@color/colorAccent</item>
+
     </style>
 
 </resources>
