--- a/app/src/main/res/layout/activity_control.xml
+++ b/app/src/main/res/layout/activity_control.xml
@@ -19,20 +19,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="16dp"
-        android:paddingRight="16dp">
+        android:paddingRight="16dp"
+        android:layout_gravity="center_vertical">
 
 
          <Button
             android:theme="@style/Widget.AppCompat.Button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
             android:text="forward"
             android:elevation="2dp"
             android:id="@+id/forward"/>
 
 
-         <Button
+        <!-- <Button
             android:theme="@style/Widget.AppCompat.Button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -41,7 +41,7 @@
             android:id="@+id/forward_100"
             android:elevation="2dp"
             android:layout_below="@+id/forward"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true" />-->
 
         <Button
             android:theme="@style/Widget.AppCompat.Button"
@@ -51,10 +51,10 @@
             android:text="backward"
             android:id="@+id/backward"
             android:elevation="2dp"
-            android:layout_below="@+id/forward_100"
+            android:layout_below="@+id/forward"
             android:layout_centerHorizontal="true" />
 
-        <Button
+       <!-- <Button
             android:theme="@style/Widget.AppCompat.Button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -63,7 +63,7 @@
             android:id="@+id/backward_100"
             android:elevation="2dp"
             android:layout_below="@+id/backward"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true" />-->
 
         <Button
             android:theme="@style/Widget.AppCompat.Button"
@@ -73,10 +73,10 @@
             android:elevation="2dp"
             android:text="rotate right"
             android:id="@+id/rotate_right"
-            android:layout_below="@+id/backward_100"
+            android:layout_below="@+id/backward"
             android:layout_centerHorizontal="true" />
 
-        <Button
+       <!-- <Button
             android:theme="@style/Widget.AppCompat.Button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -85,7 +85,7 @@
             android:text="rotate right 90 degree"
             android:id="@+id/rotate_right_90"
             android:layout_below="@+id/rotate_right"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true" />-->
 
         <Button
             android:theme="@style/Widget.AppCompat.Button"
@@ -95,10 +95,10 @@
             android:layout_marginTop="4dp"
             android:text="rotate left"
             android:id="@+id/rotate_left"
-            android:layout_below="@+id/rotate_right_90"
+            android:layout_below="@+id/rotate_right"
             android:layout_centerHorizontal="true" />
 
-        <Button
+       <!-- <Button
             android:theme="@style/Widget.AppCompat.Button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -107,9 +107,9 @@
             android:text="rotate left 90 degree"
             android:id="@+id/rotate_left_90"
             android:layout_below="@+id/rotate_left"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true" />-->
 
-        <Button
+       <!-- <Button
             android:theme="@style/Widget.AppCompat.Button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -118,7 +118,7 @@
             android:text="rotate back"
             android:id="@+id/rotate_back"
             android:layout_below="@+id/rotate_left_90"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true" />-->
 
         <Button
             android:theme="@style/Widget.AppCompat.Button"
@@ -128,7 +128,7 @@
             android:layout_marginTop="4dp"
             android:text="stop"
             android:id="@+id/stop"
-            android:layout_below="@+id/rotate_back"
+            android:layout_below="@+id/rotate_left"
             android:layout_centerHorizontal="true" />
 
         <Button
