--- a/app/src/main/res/layout/activity_main_appbar.xml
+++ b/app/src/main/res/layout/activity_main_appbar.xml
@@ -42,108 +42,107 @@
                     android:paddingLeft="@dimen/activity_horizontal_margin"
                     android:paddingRight="@dimen/activity_horizontal_margin">
 
-                <TextView
+               <!-- <com.example.jatin.wi_bird.MyCustomTextView
                     style="@style/MyTextStyle"
                     android:id="@+id/main_content"
-                    android:text="@string/main_activity_content"/>
+                    android:text="@string/main_activity_content"/>-->
 
 
-                <TextView
+                <com.example.jatin.wi_bird.MyCustomTextView
                     style="@style/MyHeadTextStyle"
                     android:id="@+id/specification_heading"
-                    android:layout_below="@id/main_content"
-                    android:textSize="25dp"
+                    android:textSize="20sp"
                     android:text="SPECIFICATIONS:"/>
 
-                <TextView
+                <com.example.jatin.wi_bird.MyCustomTextView
                     style="@style/MyHeadTextStyle"
                     android:id="@+id/micro_heading"
                     android:layout_below="@id/specification_heading"
                     android:text="Microcontroller:"/>
-                <TextView
+                <com.example.jatin.wi_bird.MyCustomTextView
                     style="@style/MyTextStyle"
                     android:id="@+id/micro_heading_content"
                     android:layout_below="@id/micro_heading"
                     android:text="@string/micro_content"
                     />
-                <TextView
+                <com.example.jatin.wi_bird.MyCustomTextView
                     style="@style/MyHeadTextStyle"
                     android:id="@+id/sensors_heading"
                     android:layout_below="@id/micro_heading_content"
                     android:text="Sensors:"/>
-                <TextView
+                <com.example.jatin.wi_bird.MyCustomTextView
                     style="@style/MyTextStyle"
                     android:id="@+id/sensors_heading_content"
                     android:layout_below="@id/sensors_heading"
                     android:text="@string/sensor_content"
                     />
-                <TextView
+                <com.example.jatin.wi_bird.MyCustomTextView
                     style="@style/MyHeadTextStyle"
                     android:id="@+id/indicators_heading"
                     android:layout_below="@id/sensors_heading_content"
                     android:text="Indicators:"/>
-                <TextView
+                <com.example.jatin.wi_bird.MyCustomTextView
                     style="@style/MyTextStyle"
                     android:id="@+id/indicators_heading_content"
                     android:layout_below="@id/indicators_heading"
                     android:text="@string/indicator_content" />
-                <TextView
+                <com.example.jatin.wi_bird.MyCustomTextView
                     style="@style/MyHeadTextStyle"
                     android:id="@+id/control_heading"
                     android:layout_below="@id/indicators_heading_content"
                     android:text="Control:"/>
-                <TextView
+                <com.example.jatin.wi_bird.MyCustomTextView
                     style="@style/MyTextStyle"
                     android:id="@+id/control_heading_content"
                     android:layout_below="@id/control_heading"
                     android:text="@string/control_content" />
-                <TextView
+                <com.example.jatin.wi_bird.MyCustomTextView
                     style="@style/MyHeadTextStyle"
                     android:id="@+id/comm_heading"
                     android:layout_below="@id/control_heading_content"
                     android:text="Communication:"/>
-                <TextView
+                <com.example.jatin.wi_bird.MyCustomTextView
                     style="@style/MyTextStyle"
                     android:id="@+id/comm_heading_content"
                     android:layout_below="@id/comm_heading"
                     android:text="@string/comm_content" />
-                <TextView
+                <com.example.jatin.wi_bird.MyCustomTextView
                     style="@style/MyHeadTextStyle"
                     android:id="@+id/dimension_heading"
                     android:layout_below="@id/comm_heading_content"
                     android:text="Dimensions:"/>
-                <TextView
+                <com.example.jatin.wi_bird.MyCustomTextView
                     style="@style/MyTextStyle"
                     android:id="@+id/dimension_heading_content"
                     android:layout_below="@id/dimension_heading"
                     android:text="@string/dimension_content" />
 
-                <TextView
+                <com.example.jatin.wi_bird.MyCustomTextView
                     style="@style/MyHeadTextStyle"
                     android:id="@+id/power_heading"
                     android:layout_below="@id/dimension_heading_content"
                     android:text="Power:"/>
-                <TextView
+                <com.example.jatin.wi_bird.MyCustomTextView
                     style="@style/MyTextStyle"
                     android:id="@+id/power_heading_content"
                     android:layout_below="@id/power_heading"
                     android:text="@string/power_content" />
-                <TextView
+                <com.example.jatin.wi_bird.MyCustomTextView
                     style="@style/MyHeadTextStyle"
                     android:id="@+id/battery_heading"
                     android:layout_below="@id/power_heading_content"
                     android:text="Battery Life:"/>
-                <TextView
+                <com.example.jatin.wi_bird.MyCustomTextView
                     style="@style/MyTextStyle"
                     android:id="@+id/battery_heading_content"
                     android:layout_below="@id/battery_heading"
                     android:text="@string/battery_content" />
-                <TextView
+                <com.example.jatin.wi_bird.MyCustomTextView
                     style="@style/MyHeadTextStyle"
                     android:id="@+id/locomotion_heading"
                     android:layout_below="@id/battery_heading_content"
                     android:text="Locomotion:"/>
-                <TextView
+                <com.example.jatin.wi_bird.MyCustomTextView
                     style="@style/MyTextStyle"
                     android:id="@+id/locomotion_heading_content"
                     android:layout_below="@id/locomotion_heading"
