--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -15,13 +15,13 @@
             <item
                 android:id="@+id/bluetooth"
                 android:icon="@drawable/ic_bluetooth_white_24dp"
-                android:title="Connect via Bluetooth"
+                android:title="@string/bluetooth"
                 app:showAsAction="always" />
 
             <item
                 android:id="@+id/disconnect"
                 android:icon="@drawable/ic_disconnected_96_1"
-                android:title="Disconnect"
+                android:title="@string/disconnect"
                 app:showAsAction="always" />
         </menu>
      </item>
