--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -11,6 +11,26 @@
         <item name="android:popupTheme">@style/Widget.AppCompat.PopupMenu</item>
     </style>
 
+    <style name="MyTextViewStyle" parent="Base.TextAppearance.AppCompat">
+
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <!--<item name="android:background">@color/text_head1</item>-->
+        <item name="android:textColor">@color/colorAccent</item>
+    </style>
+
+    <style name="MyTextStyle" parent="MyTextViewStyle">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">#212121</item>
+
+    </style>
+
+    <style name="MyHeadTextStyle" parent="MyTextViewStyle">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+
     <style name="AppTheme.Button" parent="Widget.AppCompat.Button">
         <item name="android:colorButtonNormal">@color/colorAccent</item>
 
